--- a/01.Passanger Counter App/index.html
+++ b/01.Passanger Counter App/index.html
@@ -12,7 +12,7 @@
     <h2 id="count-el">0</h2>
     <button onclick="increase()">INCREMENT</button>
     <button onclick="save()">SAVE</button>
-    
+    <p id="prev-entries"> Prevoius entries: </p>
  
     <script src="index.js"></script>
   </body>
