blackjack jame ui

--- a/02.Blackjack Game/index.html
+++ b/02.Blackjack Game/index.html
@@ -8,6 +8,16 @@
     <title>Blackjack Game</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Blackjack</h1>
+      <p id="message-el">Want to play a round ?</p>
+      <p id="card-el">Cards:</p>
+      <p id="sum-el">Sum:</p>
+
+      <button id="start-game" onclick="renderGame()">START</button>
+      <button id="new-game" onclick="newGame()">NEW GAME</button>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
