blackjack practices on array

--- a/02.Blackjack Game/index.html
+++ b/02.Blackjack Game/index.html
@@ -14,7 +14,7 @@
       <p id="card-el">Cards:</p>
       <p id="sum-el">Sum:</p>
 
-      <button id="start-game" onclick="renderGame()">START</button>
+      <button id="start-game" onclick="startGame()">START</button>
       <button id="new-game" onclick="newGame()">NEW GAME</button>
     </div>
 
