--- a/02.Blackjack Game/index.html
+++ b/02.Blackjack Game/index.html
@@ -15,7 +15,8 @@
       <p id="sum-el">Sum:</p>
 
       <button id="start-game" onclick="startGame()">START</button>
-      <button id="new-game" onclick="newGame()">NEW GAME</button>
+      <button id="new-game" onclick="newGame()">NEW CARD</button>
+      <p id="player-el"></p>
     </div>
 
     <script src="index.js"></script>
