practice codes added

--- a/04.Practice/index.html
+++ b/04.Practice/index.html
@@ -8,6 +8,7 @@
     <title>Practice</title>
   </head>
   <body>
+    <h1>Practice Go to console</h1>
     <script src="index.js"></script>
   </body>
 </html>
