--- a/03.Chrome Extension/index.html
+++ b/03.Chrome Extension/index.html
@@ -8,6 +8,8 @@
     <title>Chrome Extension</title>
   </head>
   <body>
+    <input type="text" id="input-el" />
+    <button id="btn-el">SAVE INPUT</button>
     <script src="index.js"></script>
   </body>
 </html>
