--- a/05.Practice-3/index.html
+++ b/05.Practice-3/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-    <title>Chrome Extension</title>
+    <title>Practice</title>
   </head>
   <body>
-    <input type="text" id="input-el" />
-    <button id="input-btn">SAVE INPUT</button>
+      <p>See developer console</p>
     <script src="index.js"></script>
   </body>
 </html>
