--- a/05.Practice-3/index.html
+++ b/05.Practice-3/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
       <p>See developer console</p>
+      <p id="welcome-el"></p>
     <script src="index.js"></script>
   </body>
 </html>
