--- a/03.Chrome Extension/index.html
+++ b/03.Chrome Extension/index.html
@@ -10,6 +10,7 @@
   <body>
     <input type="text" id="input-el" />
     <button id="input-btn">SAVE INPUT</button>
+    <button id="tab-btn">SAVE TABE</button>
     <button id="dlt-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
     <script src="index.js"></script>
